@@ -1,3 +1,8 @@
+Fri Dec 29 08:31:21 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/os_include/os_signal.h:
+          Did some cleanup in this file, removed old stuff
+
 Fri Dec 29 07:33:58 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>
 
         * bin/MakeProjectCreator/config/automake.features:
